# JetsonNano-ArcFace

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.jetson-nano  CMakeLists.txt.pc  Makefile  README.md  cmake_install.cmake  main
Data/: inverse_label.txt  test.model
Python/: MobileFacenet.py  create_txt.py  list_dir.py  load_dataset.py
main_autogen/: moc_predefs.h  mocs_compilation.cpp
main_autogen/RDKJSLABA2/: moc_add_id_form.cpp  moc_mainwindow.cpp
main_autogen/UVLADIE3JM/: moc_add_id_form.cpp  moc_mainwindow.cpp  moc_window.cpp
main_autogen/include/: ui_window.h
src/: add_id.cpp  add_id.h  main.cpp  main_addID.cpp  main_createSVM.cpp  main_predict.cpp  mtcnn.cpp  onet_rt.cpp  pnet_rt.cpp  predict.cpp  predict.h  rnet_rt.cpp  train_svm.cpp  train_svm.h  ui_window.h  window.cpp  window.h  window.ui
src/GUI/: add_id_form.cpp  add_id_form.h  add_id_form.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_add_id_form.h  ui_mainwindow.h
src/MTCNN/: mtcnn.h
